--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,12 +127,12 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-      <%# <% unless @items.length == 0 %>
-        <%# <% @items.each do |item| %> %>
-          <%# <li class='list'> %>
-            <%# <%= link_to item_path(item.id) do %> %>
-            <%# <div class='item-img-content'> %>
-              <%# <%= image_tag item.image, class: "item-img" %> %>
+      <% unless @items.length == 0 %>
+        <% @items.each do |item| %>
+          <li class='list'>
+            <%= link_to item_path(item.id) do %>
+            <div class='item-img-content'>
+              <%= image_tag item.image, class: "item-img" %>
 
               <%# 商品が売れていればsold outを表示しましょう %>
               <div class='sold-out'>
@@ -140,23 +140,23 @@
               </div>
               <%# //商品が売れていればsold outを表示しましょう %>
 
-            <%# </div> %>
-            <%# <div class='item-info'> %>
-              <%# <h3 class='item-name'> %>
-                <%# <%= item.item_name %> %>
-              <%# </h3> %>
-              <%# <div class='item-price'> %>
-                <%# <span><%= item.price %>円<br><%= item.delivery.name %></span> %>
-                <%# <div class='star-btn'> %>
-                  <%# <%= image_tag "star.png", class:"star-icon" %> %>
-                  <%# <span class='star-count'>0</span> %>
-                <%# </div> %>
-              <%# </div> %>
-            <%# </div> %>
-            <%# <% end %> %>
-          <%# </li> %>
-        <%# <% end %> %>
-      <%# <% else %> %> %>
+            </div>
+            <div class='item-info'>
+              <h3 class='item-name'>
+                <%= item.item_name %>
+              </h3>
+              <div class='item-price'>
+                <span><%= item.price %>円<br><%= item.delivery.name %></span>
+                <div class='star-btn'>
+                  <%= image_tag "star.png", class:"star-icon" %>
+                  <span class='star-count'>0</span>
+                </div>
+              </div>
+            </div>
+            <% end %>
+          </li>
+        <% end %>
+      <% else %>
       <%# ダミー商品 %>
         <li class='list'>
           <%= link_to '#' do %>
@@ -175,7 +175,7 @@
           </div>
           <% end %>
         </li>
-      <%# <% end %> %>
+      <% end %>
     </ul>
   </div>
   <%# /商品一覧 %>
