--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -35,7 +35,9 @@
 
     <%# 商品が売れていない場合はこちらを表示しましょう %>
   <% if user_signed_in? && current_user.id != @item.user_id %>
-    <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
+    <% if Order.find_by(item_id: @item.id) == nil %>
+      <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
+    <% end %>
   <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
